[gd_scene load_steps=13 format=3 uid="uid://b1j4irodi3nsu"]

[ext_resource type="PackedScene" uid="uid://dtrun58pywdjn" path="res://models/fence_1.glb" id="1_gj575"]
[ext_resource type="Script" path="res://scripts/fence_obstacle.gd" id="1_qemdc"]
[ext_resource type="Shader" path="res://shaders/curvature.gdshader" id="2_212oh"]
[ext_resource type="PackedScene" uid="uid://cmilfouk6m3at" path="res://models/fence_2.glb" id="2_peskd"]
[ext_resource type="Texture2D" uid="uid://3yrbxkwni8gi" path="res://models/palette.png" id="3_00dvd"]
[ext_resource type="PackedScene" uid="uid://b0b81rr7bmufu" path="res://models/fence_3.glb" id="3_ktdq5"]
[ext_resource type="PackedScene" uid="uid://bekeeg4ed5yqi" path="res://models/fence_4.glb" id="7_iejwb"]
[ext_resource type="PackedScene" uid="uid://v4xd77n7jam4" path="res://models/fence_5.glb" id="8_br4gq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tu8r5"]
size = Vector3(5.2, 1, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_hm4ah"]
size = Vector3(2, 1, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_fhycy"]
size = Vector3(3.2, 2, 0.1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ogl5s"]
render_priority = 0
shader = ExtResource("2_212oh")
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/point_size = 1.0
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = null
shader_parameter/specular = 0.5
shader_parameter/metallic = null
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = null
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = null
shader_parameter/texture_albedo = ExtResource("3_00dvd")

[node name="FenceObstacle" type="StaticBody3D"]
script = ExtResource("1_qemdc")

[node name="collision_1" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.51793, 0.385922, 0)
visible = false
shape = SubResource("BoxShape3D_tu8r5")

[node name="collision_2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.01343, 1.34511, 0)
visible = false
shape = SubResource("BoxShape3D_hm4ah")

[node name="collision_3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.07753, 1.34511, 0)
visible = false
shape = SubResource("BoxShape3D_hm4ah")

[node name="collision_4" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.50452, 0.830872, 0)
shape = SubResource("BoxShape3D_fhycy")

[node name="collision_5" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5484, 0.830872, 0)
shape = SubResource("BoxShape3D_fhycy")

[node name="fence_1" parent="." instance=ExtResource("1_gj575")]
visible = false

[node name="Fence1" parent="fence_1" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_ogl5s")

[node name="fence_2" parent="." instance=ExtResource("2_peskd")]
visible = false

[node name="Fence2" parent="fence_2" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_ogl5s")

[node name="fence_3" parent="." instance=ExtResource("3_ktdq5")]
visible = false

[node name="Fence3" parent="fence_3" index="0"]
transform = Transform3D(-1.60386, 0, 0, 0, 1.60386, 0, 0, 0, 1.60386, -5.05945, 0.00809777, 0.00414658)
surface_material_override/0 = SubResource("ShaderMaterial_ogl5s")

[node name="fence_4" parent="." instance=ExtResource("7_iejwb")]
visible = false

[node name="Fence4" parent="fence_4" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_ogl5s")

[node name="fence_5" parent="." instance=ExtResource("8_br4gq")]

[node name="Fence5" parent="fence_5" index="0"]
surface_material_override/0 = SubResource("ShaderMaterial_ogl5s")

[editable path="fence_1"]
[editable path="fence_2"]
[editable path="fence_3"]
[editable path="fence_4"]
[editable path="fence_5"]
